Added new debug options, gitignore and metadata

--- a/default/web.conf
+++ b/default/web.conf
@@ -3,5 +3,12 @@
 enableSplunkWebSSL = true
 SSOMode = permissive
 remoteUser = SPLUNKUSER
-trustedIP = 127.0.0.1,5.9.106.236
+trustedIP = 127.0.0.1
+
+# Debug
+minify_js = False
+minify_css = False
+js_no_cache = True
 cacheEntriesLimit = 0
+cacheBytesLimit = 0
+enableWebDebug = True
